# test-results-parser

./: .envrc  .gitignore  Cargo.toml  pyproject.toml  test_results_parser.pyi
.github/workflows/: bench.yml  ci.yml  enforce-license-compliance.yml  publish.yml  test.yml
benches/: binary.rs
src/: compute_name.rs  failure_message.rs  framework_detectors.rs  junit.rs  lib.rs  pytest_reportlog.rs  raw_upload.rs  testrun.rs  validated_string.rs  vitest_json.rs  warning.rs
src/binary/: bindings.rs  commithashes_set.rs  error.rs  flagsset.rs  format.rs  mod.rs  raw.rs  timestamps.rs  writer.rs
src/snapshots/: test_results_parser__raw_upload__tests__parse_raw_upload_success@ctest.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@empty_failure.junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@error.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@jest-junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@junit-nested-testsuite.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@junit-no-testcase-timestamp.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@no-testsuite-name.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@no-time.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@phpunit.junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@skip-error.junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@testsuites.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@vitest-junit.xml.snap  test_results_parser__raw_upload__tests__parse_raw_upload_success@warnings-junit.xml.snap  (+2 more)
templates/: test_results_message.md
tests/: junit.xml  phpunit.junit.xml  test_aggregation.py  test_compute_name.py  test_failure_message.py  test_junit.py  test_parse_raw_upload.py  warnings-junit.xml  with-eval-properties-junit.xml
tests/snapshots/: parse_raw_upload__TestParsers__junit__1.json
