[package]
name = "test_results_parser"
version = "0.5.1"
edition = "2021"

[lib]
name = "test_results_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["abi3-py312"] }
indexmap = "2.6.0"
quick-xml = "0.37.1"
regex = "1.11.1"
rinja = "0.3.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
smallvec = "2.0.0-alpha.7"
thiserror = "2.0.3"
watto = { git = "https://github.com/getsentry/watto", features = [
    "writer",
    "strings",
    "offset_set",
] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
debug = 1

[[bench]]
name = "binary"
harness = false
