[package]
name = "test_results_parser"
version = "0.5.1"
edition = "2021"

[lib]
name = "test_results_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["abi3-py312"] }
quick-xml = "0.37.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rinja = "0.3.5"
