[package]
name = "test_results_parser"
version = "0.5.1"
edition = "2021"

[lib]
name = "test_results_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Version 0.23 currently suffers from https://github.com/PyO3/pyo3/issues/4723
pyo3 = { version = "0.23.3", features = ["abi3-py312", "anyhow"] }
quick-xml = "0.37.1"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rinja = "0.3.5"
base64 = "0.22.1"
flate2 = "1.0.35"
smallvec = "2.0.0-alpha.7"
thiserror = "2.0.3"
watto = { git = "https://github.com/getsentry/watto", features = [
    "writer",
    "strings",
    "offset_set",
] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
rand = { version = "0.8.5", features = ["small_rng"] }
insta = { version = "1.42.0", features = ["glob", "yaml"] }

[profile.release]
debug = 1


[[bench]]
name = "binary"
harness = false
